examples/errors/identification/duplicated_function_declaration.xana
def foo() :: void do
end

def foo(a :: int) :: void do
end

def main() do end